--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,16 @@
 /*  your css code here. If applicable */
+nav{
+	background-color:#D3D3D3;
+	padding:10px
+	
+}
+ul{
+	list-style:none;	
+}
+li{
+	display:inline;
+	margin-right:1rem;
+	text-decoration:none;
+}
+
+
