--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,16 @@
-/*  your css code here. If applicable */
-.container{
-	background-color:#D3D3D3;
-	padding:10px
-	
-}
-ul{
-	list-style:none;
-	
-}
-li{
-	 display: inline-flex;
-    justify-content: space-evenly;
-    
-	margin-right:1rem;
-	
+.container {
+	background-color: #D3D3D3;
+	padding: 10px;
 }
 
+ul {
+	list-style: none;
+	display: flex;
+	justify-content: space-evenly;
+	padding: 0;
+	margin: 0;
+}
 
+li {
+	margin-right: 1rem;
+}
